c2rust-refactor/tests/snapshots/snapshots__refactor-reorganize_definitions-reorganize_non_ascii_ident.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor reorganize_definitions --rewrite-mode alongside -- tests/snapshots/reorganize_non_ascii_ident.rs --edition 2021
---
#![feature(register_tool)]
#![register_tool(c2rust)]
#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub mod ü_h {
    #[derive(Copy, Clone)]
    #[repr(C)]
    pub struct thing {
        pub x: i32,
    }
}
pub mod a {

    pub fn go() -> i32 {
        let t = crate::ü_h::thing { x: 1 };
        t.x
    }
}

pub mod é {

    // =============== BEGIN é_h ================
    #[derive(Copy, Clone)]
    #[repr(C)]
    pub struct other {
        pub y: i32,
    }

    pub fn go() -> i32 {
        let o = crate::é::other { y: 2 };
        o.y
    }
}

fn main() {}
