c2rust-refactor/tests/snapshots/snapshots__refactor-reorganize_definitions-reorganize_orphaned_impl_order.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor reorganize_definitions --rewrite-mode alongside -- tests/snapshots/reorganize_orphaned_impl_order.rs --edition 2021
---
#![feature(register_tool)]
#![register_tool(c2rust)]
#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub mod stuff {
    // The types the header impls attach to are all defined here, outside any
    // header module, so no moved declaration ever consumes their saved
    // `impls` entries.
    #[derive(Copy, Clone)]
    #[repr(C)]
    pub struct alpha {
        pub x: i32,
    }

    #[derive(Copy, Clone)]
    #[repr(C)]
    pub struct beta {
        pub y: i32,
    }

    #[derive(Copy, Clone)]
    #[repr(C)]
    pub struct gamma {
        pub z: i32,
    }

    impl gamma {
        pub const DEFAULT: i32 = 3;
    }
    // Three const-only impls, each on a different self type. All three
    // qualify to be carried alongside a moved declaration, so all three
    // land in the `impls` map, and none of them is ever claimed. They
    // must be reattached to `stuff` in a stable order.

    impl alpha {
        pub const DEFAULT: i32 = 1;
    }

    impl beta {
        pub const DEFAULT: i32 = 2;
    }
}

pub mod opts {

    // =============== BEGIN opts_h ================
    pub use crate::stuff::alpha;
    pub use crate::stuff::beta;
    pub use crate::stuff::gamma;

    pub fn go() -> i32 {
        alpha::DEFAULT + beta::DEFAULT + gamma::DEFAULT
    }
}

fn main() {}
