c2rust-refactor/tests/snapshots/snapshots__refactor-reorganize_definitions-reorganize_orphaned_impls.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor reorganize_definitions --rewrite-mode alongside -- tests/snapshots/reorganize_orphaned_impls.rs --edition 2021
---
#![feature(register_tool)]
#![register_tool(c2rust)]
#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub mod stuff {
    // The type the header impls attach to is defined here, outside any
    // header module.
    #[derive(Copy, Clone)]
    #[repr(C)]
    pub struct opts {
        pub x: i32,
    }
    // An impl containing a non-const item; it never qualifies for
    // saving in the first place.

    impl opts {
        pub fn reset(&mut self) {
            self.x = 0;
        }
    }
    // A const-only impl whose self type is defined outside the header
    // modules. Its saved `impls` entry is keyed by the external def,
    // which no moved declaration ever consumes.

    impl opts {
        pub const DEFAULT_X: i32 = 3;
    }
}

pub mod opts {

    // =============== BEGIN opts_h ================
    pub use crate::stuff::opts;

    pub fn go() -> i32 {
        let mut o = opts { x: opts::DEFAULT_X };
        o.reset();
        o.x
    }
}

fn main() {}
