c2rust-refactor/tests/snapshots/snapshots__refactor-reorganize_definitions-reorganize_split_renamed_import.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor reorganize_definitions --rewrite-mode alongside -- tests/snapshots/reorganize_split_renamed_import.rs --edition 2021
---
#![feature(register_tool)]
#![register_tool(c2rust)]
#![allow(non_camel_case_types)]
#![allow(dead_code)]
#![allow(unused_imports)]

pub mod other {

    // =============== BEGIN other_h ================

    // This incompatible struct shares the `tick` spelling and is

    // processed first, so the struct in dest.h below is renamed to

    // `tick_1` when both are moved out of their headers.
    #[derive(Copy, Clone)]
    #[repr(C)]
    pub struct tick {
        pub y: f64,
    }

    pub fn other_fn() {}
}

pub mod dest {
    extern "C" {
        pub static tick: i32;
    }
    // =============== BEGIN dest_h ================

    // A type and a value sharing the `tick` spelling. Both move into

    // `dest`, but the struct is renamed to `tick_1` by the collision

    // with other.h while the static keeps its name, so their new paths

    // differ even though they land in the same module.
    #[derive(Copy, Clone)]
    #[repr(C)]
    pub struct tick_1 {
        pub x: i32,
    }

    pub fn dest_fn() {}
}

// The `user` module holds one simple import resolving in both the type and
// value namespaces. After the reorganization the two targets have different
// paths (`tick_1` vs `tick`), so a second import must be added for the value
// namespace: the retained import only covers the renamed type.
pub mod user {
    use crate::dest::tick;
    use crate::dest::tick_1;

    pub fn make(x: i32) -> crate::dest::tick_1 {
        crate::dest::tick_1 { x }
    }

    pub fn read() -> i32 {
        unsafe { crate::dest::tick }
    }
}

// Same import, but aliased. The import synthesized for the value namespace
// must keep the `alias` binding: importing the static under its own name
// would collide with the local `tick` function below.
pub mod user_aliased {
    use crate::dest::tick as alias;
    use crate::dest::tick_1 as alias;

    pub fn tick() {}

    pub fn make(x: i32) -> crate::dest::tick_1 {
        crate::dest::tick_1 { x }
    }

    pub fn read() -> i32 {
        unsafe { crate::dest::tick }
    }
}

fn main() {}
