c2rust-refactor/tests/snapshots/snapshots__refactor-rewrite_expr-matcher_lit.rs-_x_Lit-0.snap
---
source: c2rust-refactor/tests/snapshots.rs
assertion_line: 198
expression: "c2rust-refactor rewrite_expr '$x:Lit' 0 --rewrite-mode alongside -- tests/snapshots/matcher_lit.rs --edition 2021"
---
fn main() {
    let x = 0;
}
