c2rust-refactor/tests/snapshots/snapshots__refactor-rewrite_expr-multi_rewrite.new-2-3.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor rewrite_expr 2 3 --rewrite-mode alongside -- tests/snapshots/multi_rewrite.new --edition 2021
---
fn main() {
    let x = 3;
}
